fix: added changes for spacing and width of icon issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -725,8 +725,7 @@ button:not(:last-child) {
   background: url("../assets/edit_hover.png") center no-repeat;
 }
 .delete-icon {
-  width: 22px;
-  min-width: 22px;
+  width: 100%;
   height: 22px;
   background: url("../assets/trash.png") center no-repeat;
 }
@@ -791,11 +790,9 @@ button:not(:last-child) {
   background-image: url("../assets/3dots hover.png");
 }
 .copy-icon {
-    width: 100%;
-      height: 25px;
-  background-image: url("../assets/Copy normal.png");
-  background-position: 0 0;
-  background-repeat: no-repeat;
+  width: 100%;
+  height: 25px;
+  background: url("../assets/Copy normal.png") center no-repeat;
 }
 .copy-icon:hover {
   cursor: pointer;
